# satlas-aoti

./: README.md  export.py  pyproject.toml  test_mem_leak.py  test_no_channel_error.py
src/: CustomInference.md  GeospatialDataProducts.md  ModelArchitecture.md  README.md  hello.py  marine_infrastructure_dataset.md
src/satlas/: tasks.py
src/satlas/cmd/: evaluate.py  vis.py
src/satlas/cmd/model/: compute_bal_weights.py  infer.py  train.py
src/satlas/cmd/to_dataset/: common.py  detect.py  get_good_images.py  polyline_rasters.py  property.py  raster.py
src/satlas/metrics/: evaluator.py  point.py  polygon.py  polyline.py  property.py  raster.py
src/satlas/model/: classify.py  dataset.py  evaluate.py  model.py  models.py
src/satlas/transforms/: __init__.py  augment.py
src/satlas/util/: __init__.py  geom.py  graph.py  grid_index.py
