[project]
name = "satlas-aoti"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "torch==2.7",
  "torchvision",
  "pytorch-triton",
  "scipy<2.0.0,>=1.11.4",
  "numpy<2.0.0,>=1.26.3",
  "rasterio<2.0.0,>=1.3.9",
  "scikit-image<1.0,>=0.22",
  "tqdm<5.0.0,>=4.66.1",
  "typer[all]<1.0.0,>=0.9.0",
  "rich<14.0.0,>=13.7.0",
  "boto3<2.0.0,>=1.34.134",
  "huggingface_hub",
  "httpx<1.0.0,>=0.26.0",
  "shapely<3.0.0,>=2.0.2",
  "geopandas<1.0.0,>=0.14.2"
  ]

[tool.pdm.build]
includes = [
    "src",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126"},
  #{ index = "pytorch-nightly-gpu"}, # Add nightly source
]
torchvision = [
  { index = "pytorch-cu126"},
  #{ index = "pytorch-nightly-gpu"}, # Add nightly source
]
pytorch-triton = [
  { index = "pytorch-cu126"},
    #{index = "pytorch-nightly-gpu"},
]